--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -135,7 +135,7 @@ options:
         url: /docs/apidocs/arrow-core-data/arrow.core/-validated/
 
       - title: NonEmptyList
-        url: /docs/arrow/data/nonemptylist/
+        url: /docs/apidocs/arrow-core-data/arrow.core/-non-empty-list/
 
       - title: ListK
         url: /docs/arrow/data/listk/
