--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile project(':arrow-validation')
     compile project(':arrow-recursion')
     compile project(':arrow-integrations-retrofit-adapter')
-    compile project(':arrow-mtl-data')
+    compile project(':arrow-mtl')
     compile project(':arrow-free-data')
     compile project(':arrow-test')
     compile project(':arrow-ui')
