--- a/modules/optics/arrow-optics-mtl/gradle.properties
+++ b/modules/optics/arrow-optics-mtl/gradle.properties
@@ -1,4 +1,4 @@
 # Maven publishing configuration
-POM_NAME=Arrow-Optics
-POM_ARTIFACT_ID=arrow-optics
+POM_NAME=Arrow Optics MTL
+POM_ARTIFACT_ID=arrow-optics-mtl
 POM_PACKAGING=jar
