--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile project(':arrow-ui')
     compile project(':arrow-free')
     compile project(':arrow-generic')
-    compile project(':arrow-query-language')
+    compile project(':arrow-aql')
     compile project(":arrow-reflect")
     kapt project(':arrow-meta')
     kaptTest project(':arrow-meta')
