--- a/compiler-plugin/build.gradle
+++ b/compiler-plugin/build.gradle
@@ -5,11 +5,8 @@ apply plugin: 'kotlin-kapt'
 //compileKotlin.kotlinOptions.freeCompilerArgs = ['-Xskip-runtime-version-check', 'true']
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
-
-  compile "com.google.auto.service:auto-service:+"
-  kapt "com.google.auto.service:auto-service:+"
+  compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  compileOnly "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
 }
 
 compileKotlin {
