--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -10,22 +10,20 @@ project.group = 'io.arrow-kt'
 project.version = '0.0.1'
 
 dependencies {
-  implementation gradleApi()
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation "org.jetbrains.kotlin:kotlin-gradle-plugin-api:$kotlin_version"
+  compile gradleApi()
+  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-gradle-plugin-api:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
   compileOnly project(":compiler-plugin") { "embeddable" }
 }
 
 compileKotlin {
   kotlinOptions.jvmTarget = "1.8"
 }
-compileTestKotlin {
-  kotlinOptions.jvmTarget = "1.8"
-}
 
 jar {
   // Embed compiler plugin in jar
-  configurations.named("compileClasspath").get().find { it.name.startsWith("plugin-compiler") }
+  from(zipTree(configurations.named("compileClasspath").get().find { it.name.startsWith("compiler-plugin") }))
 
   manifest {
     attributes["Specification-Title"] = project.name
@@ -38,7 +36,7 @@ jar {
 gradlePlugin {
   plugins {
     arrow {
-      id = "arrow.meta.plugin.gradle"
+      id = "arrow.meta.compiler.plugin"
       implementationClass = "arrow.meta.plugin.gradle.ArrowGradlePlugin"
     }
   }
@@ -52,12 +50,12 @@ pluginBundle {
 
   plugins {
     arrow {
-      id = "arrow.meta.plugin.gradle"
+      id = "arrow.meta.compiler.plugin"
       displayName = "Arrow compiler plugin"
     }
   }
 
   mavenCoordinates {
-    groupId = "arrow.meta.plugin.gradle"
+    groupId = "arrow.meta.compiler.plugin"
   }
 }
